# wayal

./: .gitignore  LICENSE  README.md  meson.build
include/: input.h  pango.h  wayal.h  window.h  xdg_app.h
src/: input.c  main.c  pango.c  wayal.c  window.c  xdg_app.c
